jellyfin/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8096
      name: web
