jellyfin/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: public
  tls:
    - secretName: jellyfin-ingress-tls
      hosts:
        - jellyfin.sergi.cool
  rules:
    - host: jellyfin.sergi.cool
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: jellyfin
                port:
                  name: web
